--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,30 @@
-# Archivos del sistema
-.DS_Store
-Thumbs.db
-
-# Directorios de IDE
-.vscode/
-.idea/
-
-# Node modules (si decides agregar npm)
+# Archivos# Dependencies
 node_modules/
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+.env
 
 # Vercel
 .vercel
@@ -15,3 +32,7 @@ node_modules/
 # Logs
 *.log
 npm-debug.log*
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
